[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rendershot"
version = "0.1.8"
description = "Python SDK for the Rendershot screenshot & PDF generation API"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["screenshot", "pdf", "rendershot", "api", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "pydantic[mypy]>=2.0",
]

[project.urls]
Homepage = "https://rendershot.io"
Repository = "https://github.com/rendershot/rendershot-python"

[tool.hatch.build.targets.wheel]
packages = ["src/rendershot"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "A", "T20", "N", "RSE"]
ignore = [
    "A002",  # `format` parameter name intentionally matches the API schema
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
known-first-party = ["rendershot"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
